# cmake-sandbox

./: CMakeLists.txt  README.dev.md  README.md  main.cpp
cmake/: fetch-libanimals.cmake
